# robe-backend

./: .env  .env.example  .gitignore  Makefile  README.md  alembic.ini  generate_postman.py  pyproject.toml
.postman/: resources.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 12cecc615b4f_add_topic_questions_and_tag_tables.py  19187ef08dc4_add_global_soft_delete_tracking.py  5b2535b6308e_update_chat_sessions_model.py  7578af01d4de_add_soft_delete_and_metadata_to_product_.py  d64e390e3496_initial.py
app/: main.py
app/api/: v1.py
app/cache/: keys.py  redis.py
app/core/: celery_app.py  config.py  logging.py  middleware.py  security.py
app/db/: base.py
app/models/: __init__.py  ai_personalities.py  breeds.py  chat_attachments.py  chat_sessions.py  messages.py  notifications.py  pet_species.py  pets.py  plans.py  product_brands.py  product_categories.py  product_recommendations.py  product_tags.py  products.py  recommendation_feedback.py  roles.py  saved_chats.py  search_history.py  subscriptions.py  topic_questions.py  topics.py  user_preferences.py  user_roles.py  users.py
app/repositories/: base.py  breed_repository.py  chat_repository.py  notification_repository.py  pet_repository.py  product_brands.py  product_categories.py  product_repository.py  question_repository.py  recommendation_repository.py  role_repository.py  species_repository.py  topic_repository.py  user_repository.py  (+1 more)
docker/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
documents/: pdf_text.txt
robe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+138 files in other folders)
