[project]
name = "robe-backend"
version = "0.1.0"
description = "RoBe backend (modular monolith)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "sqlalchemy>=2.0,<3",
  "asyncpg>=0.29,<1",
  "psycopg[binary]>=3.1,<4",
  "alembic>=1.13,<2",
  "redis>=5,<6",
  "celery>=5.4,<6",
]

[build-system]
requires = ["setuptools>=69,<80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.ruff]
line-length = 100

